tests/errors/lex6.kt
/* this comment never ends
val a = 10